feat: 全面升级依赖版本 + 核心模块注释完善
- 升级Spring Boot 3.4.7→3.4.13, Spring AI 1.0.0→1.1.8
- 升级MyBatis-Plus 3.5.9→3.5.15, Resilience4j 2.2.0→2.3.0
- 升级JJWT 0.12.6→0.12.7, springdoc 2.8.6→2.8.17
- 升级Hutool 5.8.38→5.8.46, Tess4J 5.13.0→5.19.0
- 前端npm update补丁升级(18个包, 0漏洞)
- 完善Agent模块注释(MultiAgentService/AgentService/SearchAgentService)
- 完善Memory模块注释(MemoryChatController/MemoryChatService)
- 完善Common模块注释(ErrorCode/GlobalExceptionHandler/StreamUtils)
- 完善Security模块注释(SecurityConfig)
- 完善Chat模块注释(ChatService)
- Bug扫描: 无严重Bug, 代码质量良好